@@ -369,6 +369,11 @@
 
                     <tr><td>3</td><td>up</td>
                     </tr>
+
+                    <tr><td>5</td><td>unknown</td>
+                    </tr>
+
+
                 </tbody>
             </table>
 
@@ -386,7 +391,8 @@
                 <pre>SCALE cactiupdown 0 0.5  192 192 192
                                 SCALE cactiupdown 0.5 1.5 255 0 0
                                 SCALE cactiupdown 1.5 2.5 0 0 255
-                                SCALE cactiupdown 2.5 3.5 0 255 0 </pre>
+                                SCALE cactiupdown 2.5 3.5 0 255 0
+                                SCALE cactiupdown 4.5 5.5 128 128 128 </pre>
             </div>
             
             <hr />
